# py-smart-gardena

./: .codacy.yml  .codeclimate.yml  .env  .envrc  .flake8  .gitattributes  .gitignore  .toml  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  pyproject.yaml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: pytest.yml  python-app.yml  python-publish.yml
Gardena/: __init__.py  gateway.py
gardena/: __init__.py  gateway.py
src/: main.py
src/gardena/: __init__.py  _version.py  base_gardena_class.py  base_gardena_device.py  base_gardena_device_class.py  gateway.py  location.py  main.py  mower.py  sensor.py  smart_system.py  token_manager.py  water_control.py
src/gardena/application/: container.py
src/gardena/devices/: base_device.py  device.py  gateway.py  (+11 more)
src/py_smart_gardena.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: base_test_device.py  conftest.py  fixtures.py  gardena_api_mock.py  location.py  mower.py  power_socket.py  sensor.py  smart_irrigation_control.py  smart_system_test.py  test_gateway.py  test_location.py  test_mower.py  test_sensor.py  test_smart_system.py  test_water_control.py  water_control.py
tests/devices/: base_device_test_class.py  test_base_gardena_ability_class.py  test_base_gardena_device_class.py  test_gateway.py  test_mower.py  test_power.py  test_sensor.py  test_water_control.py
tests/fixtures/: LocationFixture.py  SmartSystemFixture.py
tests/gardena_api_return/: authentication_return.py  devices_return.py  locations_return.py
tests/mocks/: gardena_api_mock.py
(+67 files in other folders)
